--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,19 @@
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+	color: #000;
+}
+
+a:hover {
+	/* text-decoration: underline; */
+	color: white;
+}
+
 body {
 	height: 100vh;
 	display: grid;
-	grid-template-rows: 0.2fr 1fr 0.2fr;
+	grid-template-rows: 0.2fr 1fr 0.15fr;
 }
 
 header {
@@ -17,10 +26,6 @@ header {
 	justify-content: space-between;
 	
 	padding: 20px 40px 15px 40px;
-}
-header a {
-	color: black;
-	
 }
 header > div {
 	display: flex;
@@ -40,8 +45,31 @@ header > div#header-nav > a:last-child {
 }
 header > div#header-nav > a:hover {
 	background-color: #31a3b8;
-	color: white;
 }
 header > div#header-div a:hover {
 	color: #4ad4ec;
+}
+
+
+
+footer {
+	background-color: #4ad4ec;
+	color: black;
+	padding: 0 40px 0 40px;
+	display: flex;
+	justify-content: space-between;
+}
+footer > div {
+	width: 100%;
+	align-content: center;
+	font-size: large;
+	font-weight: bold;
+}
+footer > div:last-child {
+	text-align: right;
+}
+footer > div.breadcrums {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
