--- a/public/css/base.css
+++ b/public/css/base.css
@@ -8,6 +8,28 @@
 
 body {
 	height: 100vh;
-	display: grid;
-	grid-template-rows: 0.15fr 1fr 0.1fr;
+	/* display: grid;
+	grid-template-rows: 0.15fr 1fr 0.1fr; */
 }
+
+.container {
+	max-width: 1080px;
+	margin: auto;
+	padding: 24px;
+
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+
+.main-border {
+	border-color: rgb(210, 210, 210);
+	border: 3px solid rgb(210, 210, 210);
+	border-radius: 10px;
+	transition: border-color 1s;
+}
+.main-border:hover {
+	border-color: blue;
+}
+
