--- a/public/css/base.css
+++ b/public/css/base.css
@@ -31,5 +31,49 @@ body {
 }
 .main-border:hover {
 	border-color: blue;
+	.legend {
+		background-color: blue;
+		color: white;
+	}
+}
+
+.legend {
+	position: absolute;
+	margin: -24px 0 0 10px;
+	background-color: rgb(210, 210, 210);
+	border-radius: 10px;
+	padding: 2px 10px;
+	transition: background-color 1s, color 0.5s;
+
+	font-weight: 500;
+	font-size: 18px;
+}
+
+/* grid-row */
+.grid-row-1 {
+	grid-row: span 1;
+}
+.grid-row-2 {
+	grid-row: span 2;
+}
+.grid-row-3 {
+	grid-row: span 3;
+}
+.grid-row-4 {
+	grid-row: span 4;
+}
+
+/* grid-col */
+.grid-col-1 {
+	grid-column: span 1;
+}
+.grid-col-2 {
+	grid-column: span 2;
+}
+.grid-col-3 {
+	grid-column: span 3;
+}
+.grid-col-4 {
+	grid-column: span 4;
 }
 
