projecten link section

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -35,6 +35,15 @@ body {
 		background-color: blue;
 		color: white;
 	}
+	.svg {
+		color: blue;
+	}
+}
+
+.svg {
+	height: 48px;
+	position: absolute;
+	right: 10px;
 }
 
 .legend {
