--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,3 +19,21 @@ main section p {
 	margin-left: 18px;
 	font-size: 18px;
 }
+
+.projects {
+	display: flex;
+	position: relative;
+}
+.projects a {
+	color: black;
+	text-decoration: none;
+	font-size: 42px;
+	font-weight: bold;
+	padding: 0;
+	margin: auto;
+
+}
+.projects:hover a {
+	color: blue;
+	transition: color 0.5s;
+}
