--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,11 +6,11 @@ main {
 	gap: 24px;
 }
 
-main section {
+main > section {
 	padding: 10px;
 }
 
-main section p {
+main > section p {
 	font-size: 20px;
 	padding: 10px 0 0 0;
 }
@@ -20,20 +20,55 @@ main section p {
 	font-size: 18px;
 }
 
-.projects {
+.internal {
 	display: flex;
 	position: relative;
 }
-.projects a {
+.internal a {
 	color: black;
 	text-decoration: none;
-	font-size: 42px;
+	/* font-size: 42px; */
+	font-size: 2.5rem;
 	font-weight: bold;
 	padding: 0;
 	margin: auto;
 
 }
-.projects:hover a {
+.internal:hover a {
+	color: blue;
+	transition: color 0.5s;
+}
+
+.links {
+	padding: 10px 0 0 0;
+	display: flex;
+	flex-direction: row;
+	gap: 12px;
+}
+
+.links a {
+	text-decoration: none;
+	border: 1px solid blue;
+	border-radius: 10px;
+	box-shadow: 2px 2px blue;
+
+	height: 48px;
+	width: fit-content;
+	padding: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.links a p {
+	color: black;
+	text-decoration: none;
+	padding: 5px;
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.links a p:hover {
 	color: blue;
 	transition: color 0.5s;
 }
