--- a/Public/css/base.css
+++ b/Public/css/base.css
@@ -11,10 +11,15 @@
 }
 body {
 	height: 100vh;
+	padding: 40px 0;
 }
 .container {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
 	max-width: 1000px;
 	width: 80%;
+	height: 100%;
 	margin: auto;
 }
 
