--- a/Public/css/base.css
+++ b/Public/css/base.css
@@ -5,28 +5,24 @@
 * {
 	padding: 0;
 	margin: 0;
-	text-decoration: none;
 	box-sizing: border-box;
+	text-decoration: none;
 	font-family: "Roboto", sans-serif;
 }
 body {
 	height: 100vh;
-	padding: 40px 0;
 }
 .container {
+	max-width: 1080px;
+	margin: auto;
+	padding: 40px 0;
 	display: flex;
 	flex-direction: column;
 	gap: 40px;
-	max-width: 1000px;
-	width: 80%;
-	height: 100%;
-	margin: auto;
 }
-
 header {
 	height: 10vh;
 }
-
 nav {
 	height: 100%;
 	display: flex;
@@ -34,37 +30,66 @@ nav {
 	align-items: center;
 	gap: 20px;
 }
-
 nav a {
 	font-size: xx-large;
 	font-weight: 500;
 	padding: 10px 15px;
+	color: black;
+}
+nav a:hover {
+	color: var(--base-border-hover);
+	transition: border-color 1s, color 1s;
 }
 
 .border {
 	border: 3px solid var(--base-border);
-	border-radius: 20px;
-	transition: border-color 1.5s, color 1s;
+	border-radius: 10px;
+	transition: border-color 1s, color 1s;
 }
 .border:hover {
 	border-color: var(--base-border-hover);
+	h3 {
+		color: var(--base-border-hover);
+	}
+	.legend {
+		background-color: var(--base-border-hover);
+		color: white;
+	}
+	.svg {
+		color: var(--base-border-hover);
+	}
+	.links a img {
+		color: var(--base-border-hover)
+	}
 }
-.link {
+
+.internal {
+	display: flex;
+	position: relative;
+	cursor: pointer;
+}
+.internal > h3 {
 	color: black;
-	/* transition: border-color 1.5s; */
+	transition: color 1s;
+	margin: auto;
+	font-size: 3rem;
+	font-weight: 500;
 }
-.link:hover {
-	color: var(--base-border-hover);
+.legend {
+	position: absolute;
+	margin: -24px 0 0 5px;
+	background-color: var(--base-border);
+	border-radius: 20px;
+	padding: 2px 10px;
+	transition: background-color 1s, color 1s;
+	font-weight: 500;
+	font-size: 18px;
 }
-
-.whole {
-	height: 100%;
-	display: grid;
-	grid-template-rows: repeat(4, 1fr);
-	grid-template-columns: repeat(4, 1fr);
-}
-
-.whole-section {
-	grid-row: span 1;
-	grid-column: span 1;
+.svg {
+	color: black;
+	height: 3rem;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	transition: color 1s;
 }
