--- a/Public/css/base.css
+++ b/Public/css/base.css
@@ -94,6 +94,39 @@ nav a:hover {
 	transition: color 1s;
 }
 
+.links {
+	padding: 10px 0 0 0;
+	display: flex;
+	flex-direction: row;
+	gap: 12px;
+}
+
+.links a {
+	text-decoration: none;
+	border: 1px solid var(--base-border-hover);
+	border-radius: 10px;
+	box-shadow: 2px 2px var(--base-border-hover);
+
+	height: 48px;
+	width: fit-content;
+	padding: 10px 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.links a p {
+	color: black;
+	padding: 0;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.links a p:hover {
+	color: var(--base-border-hover);
+	transition: color 0.5s;
+}
+
 #admin-section {
 	display: flex;
 	justify-content: flex-end;
