--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -53,3 +53,10 @@ main>section p {
 #footer {
 	grid-area: footer;
 }
+
+@media only screen and (max-width: 950px) {
+	main {
+		display: flex;
+		flex-direction: column;
+	}
+}
